--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,6 @@
     <string name="movie_detail_activity">Movie Details</string>
     <string name="trailers">Trailers:</string>
     <string name="trailer">Trailer %1$s</string>
+    <string name="reviews">Reviews:</string>
+    <string name="author">Author:</string>
 </resources>
