Added Room API and the Favorite checkbox.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="trailer">Trailer %1$s</string>
     <string name="reviews">Reviews:</string>
     <string name="author">Author:</string>
+    <string name="favorite">Favorite</string>
 </resources>
