--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="movie_image">Movie Image</string>
     <string name="most_popular_movies">Most Popular Movies</string>
     <string name="top_movies">Top Movies</string>
+    <string name="favorite_movies">Favorite Movies</string>
     <string name="no_data">Data is not available</string>
     <string name="movie_poster">Movie Poster</string>
     <string name="release_year">Release Year</string>
