Added a button to load more reviews.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="reviews">Reviews:</string>
     <string name="author">Author:</string>
     <string name="favorite">Favorite</string>
+    <string name="show_more_reviews">Show more reviews</string>
 </resources>
