--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,6 @@
     <string name="author">Author:</string>
     <string name="favorite">Favorite</string>
     <string name="show_more_reviews">Show more reviews</string>
+    <string name="no_trailers_available">No trailers available</string>
+    <string name="no_reviews_available">No reviews available</string>
 </resources>
